# auto_code_reviwer

./: Cargo.toml  README.md
src/: cli.rs  config.rs  github.rs  gitlab.rs  main.rs  openai.rs
