[package]
name = "auto_code_reviwer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
config = "0.14.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = {version = "1.38.0", features = ["full"]}
url = "2.5.0"
